--- a/styles/OnePage.scss
+++ b/styles/OnePage.scss
@@ -308,6 +308,10 @@ nav {
     color: rgba(249, 249, 249, 0.6);
   }
 }
+a{
+  text-decoration: none;
+  color: black;
+}
 
 .before_footer_container {
   background-color: #ffec8a;
