--- a/styles/OnePage.css
+++ b/styles/OnePage.css
@@ -288,6 +288,11 @@ nav {
   color: rgba(249, 249, 249, 0.6);
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .before_footer_container {
   background-color: #ffec8a;
   position: absolute;
